Quorum/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriIntegerRetinteger.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, integer> yoda
        check
            integer ret = yoda:useForce(one, two)
        detect e
            output "passed"
        end
     end
end
