Quorum/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriIntegerRetIntObjFail.quorum
class Main
    action Main
        integer one = 66
        integer two = 66
        Yoda<integer, integer, Integer> yoda
        boolean wrongRet = yoda(one, two)
     end
end
